Updated the embedded waterfall chart workings to simpler process

--- a/main.js.html
+++ b/main.js.html
@@ -1,6 +1,6 @@
 <script>
 // the app
-google.load('visualization','current',{'packages':['corechart']});
+google.load('visualization','1.0',{'packages':['corechart']});
 
 // wait for the viz library to load
 google.setOnLoadCallback (function() {
